# plato-meta-tiles

./: README.md  agent.py  pyproject.toml
plato_meta/: __init__.py
plato_meta_tiles.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_meta.py
